=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.951

   * reinitialize now stops rocking

   * fixed logging of button presses in MacPyMOL

   * added multi-line command paste support to MacPyMOL

   * dropped support for "del all" in favor of "dele all"

   * StereoPyMOL1280 mode on mac for higher-resolution stereo

   * fixed a race condition that was causing OSX-X11-hybrid to crash
     when "quit" was typed into the external Tcl/Tk GUI
    
   * added numarray into the osx-x11-hybrid version for BSI use

   * added a "perceptive space" rainbow & switched this over to default

   * fixed ray-tracing bug with infinite loops on transparent surfaces

   * fixed logging for new molecular editing features

   * pdb1 extension support

   * fixed unintentional default OpenGL bug reporting 

Changes up to 0.95

   * changed cartoon_tube_radius to a more aestically pleasing 0.5A

   * ribbon now shows nuc. acid backbone too

   * added presets for ligand sites, including our new surface reps.

   * fixed bug with scene coloring

   * adjusted clipping plane bounds to eliminate shingle effect from
     excessive depth ranges.

   * mesh_normals setting for surface_type 2

   * launch option: -P # enables multisampling on Macs & Windows.
     NOTE: on Windows, only "-P 4" works, and only tested on ATI cards.

   * session_migration setting

   * fixed problem with view matrix exploding on some proteins -- now
     allow front clipping plane to go negative with suitable safeguards

   * fixed bug with raytracing transparent surfaces using intermediate 
     backgrounds

   * surface code now tolerates superimposed identical atoms more gracefully

   * dot_normals setting

   * bound_to selection operator now complements neighbor...

   * fixed stereo opengl bug & improved opengl debugging capability
