@@ -27,6 +27,7 @@ Z* -------------------------------------------------------------------
 #include"Setting.h"
 #include"main.h"
 #include"ObjectMolecule.h"
+#include"Scene.h"
 
 void RepDotRender(RepDot *I,CRay *ray,Pickable **pick);
 void RepDotFree(RepDot *I);
@@ -87,10 +88,15 @@ void RepDotRender(RepDot *I,CRay *ray,Pickable **pick)
   } else if(PMGUI) {
 
     int normals = SettingGet_f(I->R.cs->Setting,I->R.obj->Setting,cSetting_dot_normals);
+    int lighting = SettingGet_f(I->R.cs->Setting,I->R.obj->Setting,cSetting_dot_lighting);
     int use_dlst;
 
     if(!normals)
       SceneResetNormal(true);
+    if(!lighting)
+      glDisable(GL_LIGHTING);
+      
+      
     use_dlst = (int)SettingGet(cSetting_use_display_lists);
     if(use_dlst&&I->R.displayList) {
       glCallList(I->R.displayList);
@@ -126,6 +132,8 @@ void RepDotRender(RepDot *I,CRay *ray,Pickable **pick)
       if(use_dlst&&I->R.displayList) {
         glEndList();
       }
+      if(!lighting)
+        glEnable(GL_LIGHTING);
     }
   }
 }
